mockiato_codegen/tests/ui/malformed-derive-attr.rs
#![feature(plugin)]
#![plugin(mockiato_codegen)]

#[mockable(derive = "Foo")]
trait Foo {}
